--- a/SlackInterview/Base.lproj/Main.storyboard
+++ b/SlackInterview/Base.lproj/Main.storyboard
@@ -22,10 +22,10 @@
             </objects>
             <point key="canvasLocation" x="255" y="-56"/>
         </scene>
-        <!--ContactTableViewController-->
+        <!--EmployeeTableViewController-->
         <scene sceneID="wyy-ZX-uDX">
             <objects>
-                <tableViewController id="4vE-Dh-w5o" userLabel="ContactTableViewController" sceneMemberID="viewController">
+                <tableViewController id="4vE-Dh-w5o" userLabel="EmployeeTableViewController" customClass="EmployeeTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="TLA-HQ-3Lm">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
