--- a/SlackInterview/Base.lproj/Main.storyboard
+++ b/SlackInterview/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="employeeResuableCell" textLabel="xXt-sT-NXa" detailTextLabel="G4n-sM-ash" rowHeight="94" style="IBUITableViewCellStyleSubtitle" id="euF-QJ-C9Q">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="employeeResuableCell" textLabel="xXt-sT-NXa" detailTextLabel="G4n-sM-ash" rowHeight="94" style="IBUITableViewCellStyleSubtitle" id="euF-QJ-C9Q">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="euF-QJ-C9Q" id="w7Z-BM-MBX">
                                     <autoresizingMask key="autoresizingMask"/>
